Revise structure, test DB connection, add partial login & homepage UI